--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
+# Add any directories, files, or patterns you don't want to be tracked by version control
+build
+gradle
+gradlew
 .gradle
-/build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+.idea
+out
+*.ipr
+*.iws
+.env
+.DS_Store
+/.gradle
+/build
+/result.pdf
+/source.pdf
+*.iml
+*.pdf
